tests/errors/func_05.py
from lpython import i32, InOut

def f(n: InOut[i32]):
    n = 5
    print(n)
